# antec-flux-pro-display

./: Cargo.toml  README.md
.ci/: install.sh
.github/workflows/: rust.yml
.zed/: settings.json
packaging/debian/: postinst  postrm  prerm
packaging/scripts/: af-pro-display.service  install.sh  uninstall.sh
packaging/systemd/: af-pro-display.service
packaging/udev/: 99-af-pro-display.rules
src/: config.rs  cpu.rs  gpu.rs  main.rs  usb.rs
src/gpu/: amd.rs  mod.rs  nvidia.rs
